err/wissen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wissen'...
Listing './lib/python3.5/site-packages/wissen/analyzers'...
Listing './lib/python3.5/site-packages/wissen/analyzers/util'...
Listing './lib/python3.5/site-packages/wissen/classifier'...
Listing './lib/python3.5/site-packages/wissen/classifier/classifiers'...
Listing './lib/python3.5/site-packages/wissen/classifier/segment'...
Listing './lib/python3.5/site-packages/wissen/cluster'...
Listing './lib/python3.5/site-packages/wissen/export'...
Listing './lib/python3.5/site-packages/wissen/export/skitai'...
Listing './lib/python3.5/site-packages/wissen/export/skitai/package'...
Listing './lib/python3.5/site-packages/wissen/extension'...
Listing './lib/python3.5/site-packages/wissen/extension/wissen'...
Listing './lib/python3.5/site-packages/wissen/extension/wissen/analyzer'...
Listing './lib/python3.5/site-packages/wissen/extension/wissen/index'...
Listing './lib/python3.5/site-packages/wissen/extension/wissen/win32'...
Listing './lib/python3.5/site-packages/wissen/lib'...
Compiling './lib/python3.5/site-packages/wissen/lib/diskusage.py'...
***   File "./lib/python3.5/site-packages/wissen/lib/diskusage.py", line 34
    du = disk_usage (r"C:\")
                           ^
SyntaxError: EOL while scanning string literal

Listing './lib/python3.5/site-packages/wissen/searcher'...
Listing './lib/python3.5/site-packages/wissen/searcher/segment'...
Listing './lib/python3.5/site-packages/wissen/util'...
Listing './lib/python3.5/site-packages/wissen/win32inclib'...
Listing './lib/python3.5/site-packages/wissen/win32inclib/pthread2'...
Listing './lib/python3.5/site-packages/wissen/win32inclib/pthread2/x64'...
Listing './lib/python3.5/site-packages/wissen/win32inclib/pthread2/x86'...
Listing './lib/python3.5/site-packages/wissen/win32inclib/zlib'...
Listing './lib/python3.5/site-packages/wissen/win32inclib/zlib/x64'...
Listing './lib/python3.5/site-packages/wissen/win32inclib/zlib/x86'...
Listing './lib/python3.5/site-packages/wissen-0.13.1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
